# adaptive-learning-platform

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
artifacts/agent_traces/: practice_demo.json  query_demo.json  tutor_demo.json
artifacts/bootstrap_data/: adaptive_learning.db  concept_graph.json  concept_relationships.csv  concepts.csv  dataset_summary.json  questions.csv  solutions.csv  syllabus_topics.csv  textbook_sections.csv  theory_content.csv
artifacts/fine_tuning/: adaptation_comparisons.csv  difficulty_calibrator.joblib  difficulty_metrics.json  difficulty_training_dataset.csv  fine_tuning_summary.json
artifacts/generated_content/: content_generation_summary.json  generated_explanations.csv  generated_questions.csv  generated_summaries.csv
artifacts/mastery/: attempts.csv  mastery_history.csv  mastery_snapshot.csv  mastery_summary.json
artifacts/rag_index/: documents.csv  faiss.index  rag_summary.json  vector_store_meta.json
artifacts/recommendations/: recommendation_summary.json  recommendations.csv
artifacts/search_index/: documents.csv  faiss.index  index_summary.json
docs/: MCP.md
scripts/: agent_demo.py  build_all.py  build_fine_tuning.py  build_generated_content.py  build_learn_index.py  build_mastery.py  build_rag_index.py  build_recommendations.py  build_search_index.py  content_generation_demo.py  fine_tuning_demo.py  generate_data.py  mastery_demo.py  rag_demo.py  recommendation_demo.py  search_demo.py
tests/: test_learn_and_scheduling.py  test_smoke.py
(+111 files in other folders)
