[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-learning-platform"
version = "0.1.0"
description = "Portfolio-grade adaptive learning platform for CBSE Class 10 Mathematics and Science."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "networkx>=3.2",
    "streamlit>=1.43",
    "sentence-transformers>=3.3",
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.4",
    "joblib>=1.4",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
